# easy_agents

./: .env.example  .gitignore  MEMORY_VECTOR_INDEX_PLAN.md  README.md  REFACTOR_FIX_PLAN.md  dotring.md  memory.md  pyproject.toml  setup.sh  sitecustomize.py  ui-render.sh
agents/brainstorming_agent/: README.md  __init__.py
agents/coding_agent/: README.md  __init__.py
agents/collection_agent/: README.md  __init__.py  agent.py  config.yml  graph.mmd  llm_structured.py  main.py  pipecat_bot.py  planner.py  repository.py  state.py
agents/collection_memory_helper_agent/: README.md  __init__.py  agent.py  config.yml  graph.mmd  main.py  planner.py  repository.py
agents/connections_agent/: Connections_Agent_Proposal.pptx  README.md  __init__.py  agent.py  config.yml  graph.mmd  main.py  nodes.py  planner.py  repository.py
agents/discount_planning_agent/: README.md  __init__.py  agent.py  config.yml  graph.mmd  main.py
agents/mailmind/: Online FlowChart & Diagrams Editor - Mermaid Live Editor.html  README.md  __init__.py  agent.md  agent.py  cli.py  config.py  config.yml  mailmind_scope_mapping.md  main.py  mainmindscope.md  planner.py
agents/orchestrator/: README.md  __init__.py
agents/simple_conversation/: README.md  __init__.py  agent.py
config/: mailmind.local.yaml.example  mailmind.yaml  memory_policies.yaml  memory_tables.yaml
data/seed/: demo_messages.json
docs/: README.md
docs/agents/: brainstorming-agent.md  coding-agent.md  simple-conversation.md
docs/architecture/: framework-overview.md  memory-architecture.md
docs/conventions/: docstring-rules.md
docs/plans/: memory-vector-index-plan.md  refactor-fix-plan.md
endpoints/: __init__.py  graph_builder.py  whatsapp.py
policies/: default_policy.yaml
run/: graph_builder.sh  whatsapp.sh
src/: __init__.py
src/LLM/: __init__.py  qwen.py
src/agents/: base_agent.py  graph_agent.py  react_agent.py
src/graph_builder/: __init__.py  spec.py
src/helpers/: __init__.py  llm_classifier_template.py
src/interfaces/: __init__.py  api.py  cli.py  email.py  pipecat_runner.py  voice_processing_cli.py  whatsapp.py
src/llm/: __init__.py  base.py  factory.py  function_gemma.py  huggingface.py  local_llm.py  qwen.py  remote_llm.py
src/mailmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/memory/: base.py  (+11 more)
tests/: calculator_agent_demo.ipynb  conversation_agent_demo.ipynb  gmail_source_demo.ipynb  math_agent_demo.ipynb  memory_system_demo.ipynb  test_agent_node.py  test_agent_planner.py  test_agent_trace_sink.py  test_classifier.py  test_config.py  test_dotenv_loading.py  test_function_gemma.py  test_function_gemma_limits.py  test_gmail_source.py  test_gmail_tools_real.py  test_graph_builder_api.py  test_huggingface_json.py  test_integration_pipeline.py  test_intent_node.py  test_llm_classifier.py  test_llm_planner.py  test_llm_singleton.py  test_local_llm.py  test_mailmind_agent.py  test_mailmind_nodes.py  test_mailmind_summary_tool.py  test_math_tools.py  test_memory_node.py  test_memory_retrieve_node.py  test_memory_search_tool.py  test_memory_system.py  test_memory_types.py  test_orchestrator.py  test_pipecat_runner.py  test_policy_provider.py  test_react_agent.py  test_reflect_node.py  test_remote_llm.py  test_repository.py  test_tool_framework.py  (+7 more)
(+365 files in other folders)
