[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailmind"
version = "0.1.0"
description = "Local-first email triage and response engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1,<2.0",
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "langgraph>=0.6.7,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "twilio>=9.0,<10.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
local-llm = [
  "transformers>=4.51.0,<5.0",
]

[project.scripts]
mailmind = "mailmind.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
