[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_agent"
version = "0.1.0"
description = "Local-first email triage and response engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1,<2.0",
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "langgraph>=0.6.7,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "twilio>=9.0,<10.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
gmail = [
  "google-api-python-client>=2.0,<3.0",
  "google-auth-httplib2>=0.2,<1.0",
  "google-auth-oauthlib>=1.0,<2.0",
]
local-llm = [
  "transformers>=4.51.0,<5.0",
]
memory-vector = [
  "faiss-cpu>=1.8,<2.0",
  "numpy>=1.26,<3.0",
]
memory-vector-local = [
  "sentence-transformers>=3.0,<4.0",
  "torch>=2.2,<3.0",
]
voice-processing = [
  "numpy>=1.26,<3.0",
  "openai-whisper>=20240930",
  "silero-vad>=5.1.2,<6.0",
  "soundfile>=0.12,<1.0",
  "speechbrain>=1.0,<2.0",
  "torch>=2.2,<3.0",
  "torchaudio>=2.2,<3.0",
  "yt-dlp>=2025.1.15",
]
voice-realtime = [
  "pipecat-ai[openai,runner,websocket]>=1.0.0,<2.0",
]

[project.scripts]
voice-processing = "voice_processing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
